--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Kotlin-Wechat-Sample</string>
     <string name="action_intent_main">跳转</string>
     <string name="action_search_weather">天气查询</string>
+    <string name="kotlin_wechat_sample_bottom_behavior">sample.wechat.kotlin.BottomBehavior</string>
 </resources>
